Fixes misalignment of text labels on skin slider in firefox

--- a/style/base.scss
+++ b/style/base.scss
@@ -1322,6 +1322,7 @@ fieldset {
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 304px;
+  height: 48px;
 }
 
 input[type="range"]:focus {
